# html2markdown-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
benches/: compare.sh  compare_outputs.sh  conversion.rs
benches/compare/go/: bench_test.go  go.mod  go.sum
benches/compare/js/: bench.mjs  convert.mjs  package.json
benches/fixtures/: article.html  code.html  large.html
src/: error.rs  lib.rs  mdast.rs
src/hast_to_mdast/: handlers.rs  mod.rs  util.rs  whitespace.rs  wrap.rs
src/stringify/: escape.rs  flow.rs  handlers.rs  mod.rs  phrasing.rs
tests/: commonmark.rs  fixtures.rs  integration.rs  regression.rs
tests/bindings/: README.md
tests/bindings/cs/: ConvertTest.cs  Html2MarkdownTests.csproj
tests/bindings/dart/: .gitignore  pubspec.yaml
tests/bindings/dart/test/: convert_test.dart
tests/bindings/js/: package.json  tsconfig.json  vitest.config.ts
tests/bindings/js/test/: convert.test.ts
tests/bindings/kotlin/: build.gradle.kts  settings.gradle.kts
tests/bindings/kotlin/src/test/kotlin/: ConvertTest.kt
tests/bindings/python/: test_convert.py  test_fixtures.py  test_options.py
tests/bindings/ruby/: .gitignore  Gemfile  Rakefile
tests/bindings/ruby/test/: test_convert.rb  test_helper.rb
tests/bindings/swift/: .gitignore  Package.swift
tests/bindings/swift/Sources/html2markdown_uniffiFFI/: module.modulemap
tests/bindings/swift/Tests/Html2MarkdownTests/: ConvertTests.swift
tests/common/: mod.rs
uniffi/: Cargo.toml  uniffi-bindgen-js.rs  uniffi.toml
uniffi/src/: exports.rs  lib.rs
uniffi/wasm/: Cargo.toml
uniffi/wasm/.cargo/: config.toml
uniffi/wasm/src/: lib.rs
