[package]
name = "html2markdown"
version = "0.2.0"
edition = "2021"
description = "HTML to Markdown converter using AST-to-AST transformation"
license = "MIT"
rust-version = "1.83"
readme = "README.md"
repository = "https://github.com/nchapman/html2markdown-rs"
keywords = ["html", "markdown", "converter", "commonmark", "mdast"]
categories = ["parser-implementations", "text-processing", "web-programming"]
exclude = ["test-fixtures/", "benches/compare/", "CLAUDE.md", "PLAN.md"]

[lib]
name = "html2markdown"

[dependencies]
# HTML parsing (spec-compliant HTML5)
html5ever = "0.38"
markup5ever = "0.38"
markup5ever_rcdom = "0.38"

# Regex (context-sensitive escaping patterns)
regex = "1"

# URL resolution (<base> support)
url = "2"

# Error types
thiserror = "2"

# Logging (optional — zero-cost when disabled)
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
pretty_assertions = "1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }
html2md = "0.2"

[[bench]]
name = "conversion"
harness = false
