[package]
name = "html2markdown-uniffi"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "html2markdown_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["cli"]

[[bin]]
name = "uniffi-bindgen-dart"
path = "uniffi-bindgen-dart.rs"
required-features = ["dart-cli"]

[[bin]]
name = "uniffi-bindgen-js"
path = "uniffi-bindgen-js.rs"
required-features = ["js-cli"]

[features]
cli = ["uniffi/cli"]
dart-cli = ["dep:uniffi-bindgen-dart"]
js-cli = ["dep:uniffi-bindgen-js", "dep:clap"]

[dependencies]
uniffi = { version = "0.31", features = ["scaffolding-ffi-buffer-fns"] }
thiserror = "2"
html2markdown = { path = ".." }
uniffi-bindgen-dart = { version = "0.1.3", optional = true }
uniffi-bindgen-js = { version = "0.2.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
