[package]
name = "html2markdown-uniffi-wasm"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "html2markdown_uniffi"

[dependencies]
uniffi = { version = "0.31", features = ["scaffolding-ffi-buffer-fns", "wasm-unstable-single-threaded"] }
thiserror = "2"
html2markdown = { path = "../.." }
